# load-balancer

./: .gitignore  run_local_test.sh
gateway/: gateway.js  monitor.js  package-lock.json  package.json  pnpm-lock.yaml
gateway/microservices-clients/: msgpack.js
gateway/microservices-clients/grpc/src/: grpc-client.js
gateway/microservices-clients/mqtt/: mqtt.js
gateway/microservices-clients/rsi/: CalculatorProxy.js  ClientConnector.js
load-balancer/: Cargo.toml
load-balancer/settings/: development.example.toml
load-balancer/src/: gateway.rs  lib.rs  main.rs  prelude.rs  proxy.rs  settings.rs  telemetry.rs  types.rs
load-balancer/src/gateway/: gateway.rs  mod.rs  types.rs
microservices/: .gitignore  README.md  run_all_ms.sh
microservices/grpc-java/matrix-det/: pom.xml
microservices/minirsi-node/: README.md
microservices/minirsi-node/client/: cli.js  package-lock.json  package.json
microservices/minirsi-node/compiler/: Compiler.js  proto.txt
microservices/minirsi-node/server/: Calculator.js  Dispatcher.js  package-lock.json  package.json
microservices/mqtt-node-ts/: package-lock.json  package.json  pnpm-lock.yaml
microservices/mqtt-node-ts/src/: consumer.ts  index.ts  sensor.ts
microservices/msgpack-python/: client.py  main.py  requirements.txt  teams.json  teams_backup.sql
microservices/msgpack-python/app/core/: config.py
microservices/msgpack-python/app/db/: session.py
microservices/msgpack-python/app/schemas/: teamSchemas.py
settings/: development.example.toml
src/: main.rs  settings.rs
(+6 files in other folders)
